--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>${spring-security-oauth.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
