--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=false
 
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+
+logging.level.org.springframework=DEBUG
