Signing JWT with RSA SHA-256

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.open-in-view=false
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
