Configuration JWT class created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=false
 
+authbase.jwt.keystore.path=keystores/authbase.jks
+authbase.jwt.keystore.password=123456
+authbase.jwt.keystore.keypair-alias=authbase
+
+
 #spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth/check_token
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
