--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ authbase.jwt.keystore.path=keystores/authbase.jks
 authbase.jwt.keystore.password=123456
 authbase.jwt.keystore.keypair-alias=authbase
 
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keystores/authbase-public-key.pem
 
 #spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth/check_token
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
