Show spring framework debug logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keystore
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
