Validate users in database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.jpa.open-in-view=false
 
-authbase.jwt.keystore.path=keystores/authbase.jks
+authbase.jwt.keystore.jks-location=classpath:keystores/authbase.jks
 authbase.jwt.keystore.password=123456
 authbase.jwt.keystore.keypair-alias=authbase
 
