--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 spring.jpa.open-in-view=false
 
 authbase.jwt.keystore.jks-location=classpath:keystores/authbase.jks
