Add basic mail feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,16 @@ spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keystore
 #spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth/check_token
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#logging.level.org.springframework=DEBUG
 
-logging.level.org.springframework=DEBUG
+# Email
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=db3942fc1d700e
+spring.mail.password=8b7ba596bca278
+spring.freemarker.settings.locale=pt_BR
+authbase.mail.impl=fake
+authbase.mail.sender=Authbase <noreply@authbase.com>
+authbase.mail.sandbox.receiver=test@authbase.com
+
+
